# ncnn-android-nanodet

./: .clang-tidy  .gitignore  README.md
app/: build.gradle
app/src/main/assets/: ncnn_model.ncnn.param
app/src/main/java/com/tencent/nanodetncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  ndkcamera.h
app/src/main/jni/common/: android_log.h
app/src/main/jni/lanedet/: lanedet.cpp  lanedet.h
app/src/main/jni/nanodet/: nanodet.cpp  nanodet.h  nanodetncnn.cpp
artifacts/docker/: dev.dockerfile
scripts/: build.sh
